--- a/StockAnalyzer.Windows/MainWindow.xaml
+++ b/StockAnalyzer.Windows/MainWindow.xaml
@@ -41,9 +41,8 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="100" />
                     </Grid.ColumnDefinitions>
-                    <TextBox Grid.Column="0" Padding="3" Margin="0,0,98,0" x:Name="StockIdentifier"></TextBox>
-                    <Button x:Name="Search" Click="Search_Click" Margin="585,0,0,0" Height="35" VerticalAlignment="Center">Search</Button>
-                    <Button x:Name="Cancel" Click="Cancel_Click" Margin="10,0,10,1" Grid.Column="1">Cancel</Button>
+                    <TextBox Grid.Column="0" Padding="3" Margin="0 0 20 0" x:Name="StockIdentifier"></TextBox>
+                    <Button x:Name="Search" Grid.Column="1" Click="Search_Click">Search</Button>
                 </Grid>
             </GroupBox>
             <Grid Grid.Row="1">
